--- a/40kScraper.Console/40kScraper.Console.csproj
+++ b/40kScraper.Console/40kScraper.Console.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     <PackageReference Include="PuppeteerSharp" Version="9.0.2" />
+    <PackageReference Include="System.Text.Json" Version="7.0.2" />
   </ItemGroup>
 
 </Project>
