--- a/CitadelScraper.Console/CitadelScraper.Console.csproj
+++ b/CitadelScraper.Console/CitadelScraper.Console.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CitadelScraper\CitadelScraper.csproj" />
   </ItemGroup>
 
